--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
              </div>
              <div class="col-lg-7" id="about-text">
 
-                 <div class="wow animated fadeInRight" data-wow-delay="0.8s"><span class="h1">What we do</span><hr id="about-banner"/></div>
+                 <div class="wow animated fadeInRight" data-wow-delay="0.8s"><h1>What we do</h1><hr id="about-banner"/></div>
                  <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                      <li class="nav-item">
                          <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">CREATION</a>
