--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     <script src="https://kit.fontawesome.com/9b583a4a90.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
 
-
-
 </head>
 
 <body>
@@ -186,82 +184,77 @@
 
 </section>
 
-
 <section id="projects"><br/>
     <div class="wow animated fadeInLeft" data-wow-delay="0.8s"><hr id="red-banner"/><span class="h1">Our Works</span></div>
+    <div class="container-fluid px-0">
+        <div class="row no-gutters">
 
-    <div class="container-fluid">
-
-        <div class="row">
-
-        <div class="view overlay zoom">
-            <a href="https://ventsislavkostadinov.github.io/BritainFootball/" target="_blank"><img src="assets/gallery/400x300/classic championship-400x300.jpg" alt="zoom">
-            <div class="mask flex-center waves-effect waves-light">
-                <p class="white-text"><i class="fas fa-link"></i>&nbsp;Classic Championship</p>
-            </div></a>
-
-        </div>
-
-            <div class="view overlay zoom">
-                <a href="https://ventsislavkostadinov.github.io/colmore-o-neil-construction/" target="_blank"><img src="assets/gallery/400x300/construnction-400x300.jpg" alt="zoom">
-                <div class="mask flex-center waves-effect waves-light">
-                    <p class="white-text"><i class="fas fa-link"></i>&nbsp;Colmore O'Neil Contruction</p>
-                </div></a>
-
+            <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                <a href="https://ventsislavkostadinov.github.io/BritainFootball/" target="_blank"><img src="assets/gallery/400x300/classic championship-400x300.jpg" alt="zoom">
+                    <div class="mask flex-center waves-effect waves-light">
+                        <p class="white-text"><i class="fas fa-link"></i>&nbsp;Classic Championship</p>
+                    </div></a>
             </div>
 
-            <div class="view overlay zoom">
-                <a href="https://ventsislavkostadinov.github.io/Healthy-Food-Supplements/#/gain-muscle-mass" target="_blank"></a><img src="assets/gallery/400x300/healthy-food.jpg" alt="zoom">
-                <div class="mask flex-center waves-effect waves-light">
-                    <p class="white-text"><i class="fas fa-link"></i>&nbsp;Healthy Food supplements</p>
+           <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                 <a href="https://ventsislavkostadinov.github.io/colmore-o-neil-construction/" target="_blank"><img src="assets/gallery/400x300/construnction-400x300.jpg" alt="zoom">
+                    <div class="mask flex-center waves-effect waves-light">
+                        <p class="white-text"><i class="fas fa-link"></i>&nbsp;Colmore O'Neil Contruction</p>
+                    </div></a>
+            </div>
+             <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                  <a href="https://ventsislavkostadinov.github.io/Healthy-Food-Supplements/#/gain-muscle-mass" target="_blank"></a><img src="assets/gallery/400x300/healthy-food.jpg" alt="zoom">
+                  <div class="mask flex-center waves-effect waves-light">
+                      <p class="white-text"><i class="fas fa-link"></i>&nbsp;Healthy Food supplements</p>
+                  </div>
+              </div>
+              <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                  <a href="https://ventsislavkostadinov.github.io/IT-Academy/#/" target="_blank"><img src="assets/gallery/400x300/itacademy.jpg" alt="zoom">
+                      <div class="mask flex-center waves-effect waves-light">
+                          <p class="white-text"><i class="fas fa-link"></i>&nbsp;IT Academy</p>
+                      </div></a>
+              </div>
+              <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                  <a href="https://ventsislavkostadinov.github.io/Luxury-Home/" target="_blank"><img src="assets/gallery/400x300/luxury%20home.jpg" alt="zoom">
+                      <div class="mask flex-center waves-effect waves-light">
+                          <p class="white-text"><i class="fas fa-link"></i>&nbsp;Luxury Home</p>
+                      </div></a>
+              </div>
+              <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                  <a href="http://ventsislavportfoliowebsite.free.bg/" target="_blank"><img src="assets/gallery/400x300/my%20porfolio.jpg" alt="zoom">
+                      <div class="mask flex-center waves-effect waves-light">
+                          <p class="white-text"><i class="fas fa-link"></i>&nbsp;Demo Portfolio</p>
+                      </div></a>
+              </div>
+               <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                    <a href="https://ventsislavkostadinov.github.io/Storm-agency/" target="_blank"><img src="assets/gallery/400x300/storm%20agency.jpg" alt="zoom">
+                        <div class="mask flex-center waves-effect waves-light">
+                            <p class="white-text"><i class="fas fa-link"></i>&nbsp;Storm Agency</p>
+                        </div></a>
                 </div>
-
-            </div>
-
-            <div class="view overlay zoom">
-                <a href="https://ventsislavkostadinov.github.io/IT-Academy/#/" target="_blank"><img src="assets/gallery/400x300/itacademy.jpg" alt="zoom">
-                <div class="mask flex-center waves-effect waves-light">
-                    <p class="white-text"><i class="fas fa-link"></i>&nbsp;IT Academy</p>
-                </div></a>
-
-            </div>
-
-            <div class="view overlay zoom">
-                <a href="https://ventsislavkostadinov.github.io/Luxury-Home/" target="_blank"><img src="assets/gallery/400x300/luxury%20home.jpg" alt="zoom">
-                <div class="mask flex-center waves-effect waves-light">
-                    <p class="white-text"><i class="fas fa-link"></i>&nbsp;Luxury Home</p>
-                </div></a>
-
-            </div>
-
-            <div class="view overlay zoom">
-                <a href="http://ventsislavportfoliowebsite.free.bg/" target="_blank"><img src="assets/gallery/400x300/my%20porfolio.jpg" alt="zoom">
-                <div class="mask flex-center waves-effect waves-light">
-                    <p class="white-text"><i class="fas fa-link"></i>&nbsp;Demo Portfolio</p>
-                </div></a>
-
-            </div>
-
-            <div class="view overlay zoom">
-                <a href="https://ventsislavkostadinov.github.io/Storm-agency/" target="_blank"><img src="assets/gallery/400x300/storm%20agency.jpg" alt="zoom">
-                <div class="mask flex-center waves-effect waves-light">
-                    <p class="white-text"><i class="fas fa-link"></i>&nbsp;Storm Agency</p>
-                </div></a>
-
-            </div>
-
-            <div class="view overlay zoom">
-                <a href="https://github.com/VentsislavKostadinov/Ultra-Gym" target="_blank"><img src="assets/gallery/400x300/ultra%20gym.jpg" alt="zoom">
-                <div class="mask flex-center waves-effect waves-light">
-                    <p class="white-text"><i class="fas fa-link"></i>&nbsp;Ultra Gym</p>
-                </div></a>
-            </div>
+                <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                    <a href="https://github.com/VentsislavKostadinov/Ultra-Gym" target="_blank"><img src="assets/gallery/400x300/ultra%20gym.jpg" alt="zoom">
+                        <div class="mask flex-center waves-effect waves-light">
+                            <p class="white-text"><i class="fas fa-link"></i>&nbsp;Ultra Gym</p>
+                        </div></a>
+                </div>
+              <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
+                  <a href="https://ventsislavkostadinov.github.io/HTML-CSS-Animations-assignment-task-2/" target="_blank"><img src="assets/gallery/400x300/ara.jpg" alt="zoom">
+                      <div class="mask flex-center waves-effect waves-light">
+                          <p class="white-text"><i class="fas fa-link"></i>&nbsp;Nature Home</p>
+                      </div></a>
+              </div>
         </div>
-        </div>
-    </section>
+    </div>
+</section>
+
 
 <section id='particles-js'>
 
+    <div class="container ">
+    <h1>We deliver solutions</h1>
+     <h2>for your business</h2>
+    </div>
 </section>
 
 
@@ -275,15 +268,6 @@
         console.log('callback - particles.js config loaded')
     })
 </script>
-
-<!--<script>
-  const parallax = document.getElementById('parallax');
-
-  window.addEventListener('scroll', function () {
-      let offset = window.pageYOffset;
-      parallax.style.backgroundPositionY = offset * 0.7 + "px";
-  })
-</script> -->
 
 </body>
 </html>
