--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <li class="nav-item">
                 <a class="nav-link lang scroll" href="#projects" key="projects">Projects</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link lang scroll" href="#particles-js" key="particles">Why us</a>
+            </li>
 
         </ul>
 
@@ -280,7 +283,7 @@
 
 
 <section id='particles-js' class="bg-holder" data-width="1920" data-height="1080">
-    <div class="container text-center">
+    <div class=" container text-center">
         <h1>We deliver solutions</h1>
         <h2>for your business</h2>
     </div>
