--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="bootstrap/popper.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
     <script src="js/wow.min.js"></script>
-    <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
     <script src="js/translation.js"></script>
     <script src="js/nav-change-color.js"></script>
     <script src="js/scrolling.js"></script>
@@ -19,9 +18,9 @@
     <script src="js/jquery.parallax-scroll.js"></script>
 
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/9b583a4a90.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
@@ -283,7 +282,7 @@
 
 
 <section id='particles-js' class="bg-holder" data-width="1920" data-height="1080">
-    <div class=" container text-center">
+    <div class="container text-center">
         <h1>We deliver solutions</h1>
         <h2>for your business</h2>
     </div>
