--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="bootstrap/popper.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
     <script src="js/wow.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
     <script src="js/translation.js"></script>
     <script src="js/nav-change-color.js"></script>
     <script src="js/scrolling.js"></script>
@@ -58,7 +58,6 @@
             <li class="nav-item">
                 <a class="nav-link lang scroll" href="#particles-js" key="particles">Why us</a>
             </li>
-
         </ul>
 
         <ul class="navbar-nav pull-right" id="lang-translation-links">
@@ -76,7 +75,7 @@
 <!--/.Navbar-->
 
 <!--Carousel Wrapper-->
-<div id="carousel-example-1" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
+<div id="carousel-example-1" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000" data-width="1920" data-height="1080">
 
     <!--Indicators-->
     <ol class="carousel-indicators">
@@ -281,7 +280,7 @@
 </section>
 
 
-<section id='particles-js' class="bg-holder" data-width="1920" data-height="1080">
+<section id='particles-js' class="bg-holder">
     <div class="container text-center">
         <h1>We deliver solutions</h1>
         <h2>for your business</h2>
