--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 <!--/.Navbar-->
 
 <!--Carousel Wrapper-->
-<div id="carousel-example-1" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000" data-width="1920" data-height="1080">
+<div id="carousel-example-1" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000"
+     data-width="1920" data-height="1080">
 
     <!--Indicators-->
     <ol class="carousel-indicators">
@@ -277,29 +278,34 @@
             </div>
         </div>
     </div>
-</section>
 
 
-<section id='particles-js' class="bg-holder">
-    <div class="container text-center">
-        <h1>We deliver solutions</h1>
-        <h2>for your business</h2>
-    </div>
-</section>
+    <section id='particles-js' class="bg-holder" data-width="1920" data-height="1080">
+        <div class="container-fluid text-center">
+            <h1>We deliver Solutions</h1>
+            <h2>for your business</h2>
+        </div>
 
-<script>
-    new WOW().init();
-</script>
+    </section>
 
-<script>
-    particlesJS.load('particles-js', 'particles.json', function () {
-        console.log('callback - particles.js config loaded')
-    })
-</script>
 
-<script>
-    $('.bg-holder').parallaxScroll({friction: 0.5});
-</script>
+    <!--<section id="new-section">
+        <h1>A new Demo Section</h1>
+    </section> -->
+
+    <script>
+        new WOW().init();
+    </script>
+
+    <script>
+        particlesJS.load('particles-js', 'particles.json', function () {
+            console.log('callback - particles.js config loaded')
+        })
+    </script>
+
+    <script>
+        $('.bg-holder').parallaxScroll({friction: 0.5});
+    </script>
 
 </body>
 </html>
