--- a/index.html
+++ b/index.html
@@ -278,34 +278,34 @@
             </div>
         </div>
     </div>
-
+</section>
 
     <section id='particles-js' class="bg-holder" data-width="1920" data-height="1080">
         <div class="container-fluid text-center">
             <h1>We deliver Solutions</h1>
             <h2>for your business</h2>
         </div>
-
     </section>
 
+<section id="technologies">
+    <h1>Test Section</h1>
+</section>
 
-    <!--<section id="new-section">
-        <h1>A new Demo Section</h1>
-    </section> -->
 
     <script>
         new WOW().init();
-    </script>
 
-    <script>
+
+
         particlesJS.load('particles-js', 'particles.json', function () {
             console.log('callback - particles.js config loaded')
         })
-    </script>
 
-    <script>
+
+
         $('.bg-holder').parallaxScroll({friction: 0.5});
     </script>
+
 
 </body>
 </html>
