--- a/index.html
+++ b/index.html
@@ -288,19 +288,39 @@
     </section>
 
 <section id="technologies">
-    <h1>Test Section</h1>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-3 col-sm-12">
+            <i class="fas fa-code"></i>
+                <p class="text-center"><span>Software </span>Development</p>
+            </div>
+
+            <div class="col-md-3 col-sm-12">
+                <i class="fab fa-css3"></i>
+                <p class="text-center"><span>Software </span>Development</p>
+            </div>
+
+            <div class="col-md-3 col-sm-12">
+                <i class="fab fa-css3"></i>
+                <p class="text-center"><span>Software </span>Development</p>
+            </div>
+
+            <div class="col-md-3 col-sm-12">
+                <i class="fab fa-css3"></i>
+                <p class="text-center"><span>Software </span>Development</p>
+            </div>
+        </div>
+    </div>
 </section>
 
 
     <script>
         new WOW().init();
 
-
-
         particlesJS.load('particles-js', 'particles.json', function () {
             console.log('callback - particles.js config loaded')
-        })
-
+        });
 
 
         $('.bg-holder').parallaxScroll({friction: 0.5});
