--- a/index.html
+++ b/index.html
@@ -288,27 +288,27 @@
     </section>
 
 <section id="technologies">
-
+   <h1 class="h1">Services</h1>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-3 col-sm-12">
+            <div class="col-md-3 col-sm-6">
             <i class="fas fa-code"></i>
                 <p class="text-center"><span>Software </span>Development</p>
             </div>
 
-            <div class="col-md-3 col-sm-12">
-                <i class="fab fa-css3"></i>
-                <p class="text-center"><span>Software </span>Development</p>
+            <div class="col-md-3 col-sm-6">
+                <i class="fas fa-terminal"></i>
+                <p class="text-center"><span>Computer </span>Administration</p>
             </div>
 
-            <div class="col-md-3 col-sm-12">
-                <i class="fab fa-css3"></i>
-                <p class="text-center"><span>Software </span>Development</p>
+            <div class="col-md-3 col-sm-6">
+                <i class="fas fa-user-secret"></i>
+                <p class="text-center"><span>Antivirus </span>Protection</p>
             </div>
 
-            <div class="col-md-3 col-sm-12">
-                <i class="fab fa-css3"></i>
-                <p class="text-center"><span>Software </span>Development</p>
+            <div class="col-md-3 col-sm-6">
+                <i class="fas fa-bug"></i>
+                <p class="text-center"><span>Quality </span>Assurance</p>
             </div>
         </div>
     </div>
