--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
     <script src="js/translation.js"></script>
     <script src="js/nav-change-color.js"></script>
-    <script src="js/scrolling.js"></script>
+    <!--<script src="js/scrolling.js"></script> -->
     <script src="js/description.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="js/jquery.parallax-scroll.js"></script>
@@ -132,7 +132,7 @@
 
 <!-- POP UP BUTTON -->
 
-<button type="button" class= "btn btn-primary" id="top-button"></button>
+<button type="button" class= "btn btn-primary" id="top-button" ></button>
 
 
 <section id="about-us">
