--- a/index.html
+++ b/index.html
@@ -1,31 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio</title>
-    <script src="bootstrap/jquery-3.4.1.min.js"></script>
-    <script src="bootstrap/popper.min.js"></script>
-    <script src="bootstrap/bootstrap.min.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
-    <script src="js/translation.js"></script>
-    <script src="js/nav-change-color.js"></script>
-    <!--<script src="js/scrolling.js"></script> -->
-    <script src="js/description.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <script src="js/jquery.parallax-scroll.js"></script>
 
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/9b583a4a90.js" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
-
 <body>
-
 <!--Navbar scrolling-navbar fixed-top-->
 <nav class="navbar navbar-expand-lg navbar-dark scrolling-navbar fixed-top">
 
@@ -45,18 +29,18 @@
         <!-- Links -->
         <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-                <a class="nav-link lang scroll" href="#home" key="home">Home<span class="sr-only">(current)</span>
+                <a class="nav-link lang scroll" href="#home" key="home-tr">Home<span class="sr-only">(current)</span>
                 </a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link lang scroll" href="#about-us" key="about">About us</a>
+                <a class="nav-link lang scroll" href="#about-us" key="about-tr">About us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link lang scroll" href="#projects" key="projects">Projects</a>
+                <a class="nav-link lang scroll" href="#projects" key="projects-tr">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link lang scroll" href="#particles-js" key="particles">Why us</a>
+                <a class="nav-link lang scroll" href="#particles-js" key="particles-tr">Why us</a>
             </li>
         </ul>
 
@@ -93,7 +77,7 @@
         <div class="carousel-item active">
             <div class="view">
                 <div class="full-bg-img flex-center">
-                    <h1 class="lang" key="deliver">We deliver your stunning website</h1>
+                    <h1 class="lang" key="deliver-tr">We deliver your stunning website</h1>
                 </div>
             </div>
         </div>
@@ -102,7 +86,7 @@
         <div class="carousel-item">
             <div class="view">
                 <div class="full-bg-img flex-center">
-                    <h1 class="lang" key="theme">Choose your theme</h1>
+                    <h1 class="lang" key="theme-tr">Choose your theme</h1>
                 </div>
             </div>
         </div>
@@ -110,7 +94,7 @@
         <div class="carousel-item">
             <div class="view">
                 <div class="full-bg-img flex-center">
-                    <h1 class="lang" key="business">Let your business be successful</h1>
+                    <h1 class="lang" key="business-tr">Let your business be successful</h1>
                 </div>
             </div>
         </div>
@@ -134,7 +118,6 @@
 
 <button type="button" class= "btn btn-primary" id="top-button" ></button>
 
-
 <section id="about-us">
     <div class="container-fluid">
         <div class="row ">
@@ -144,21 +127,22 @@
             </div>
             <div class="col-lg-7" id="about-text">
 
-                <div class="wow animated fadeInRight" data-wow-delay="0.8s"><h1>What we do</h1>
+                <div class="wow animated fadeInRight" data-wow-delay="0.8s">
+                    <h1 class="lang" key="what-we-do-tr" >What we do</h1>
                     <hr id="about-banner"/>
                 </div>
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
-                           aria-controls="pills-home" aria-selected="true">CREATION</a>
+                        <a class="nav-link lang" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
+                           aria-controls="pills-home" aria-selected="true" key="develop-tr">DEVELOPMENT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
-                           aria-controls="pills-profile" aria-selected="false">ANALYSIS</a>
+                        <a class="nav-link lang" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
+                           aria-controls="pills-profile" aria-selected="false" key="qa-tr">TESTING</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab"
-                           aria-controls="pills-contact" aria-selected="false">STRATEGY</a>
+                        <a class="nav-link lang" id="pills-contact-tab" data-toggle="pill" href="#pills-contact" role="tab"
+                           aria-controls="pills-contact" aria-selected="false"  key="maintain-tr">MAINTAINING</a>
                     </li>
                 </ul>
                 <hr>
@@ -183,7 +167,6 @@
             <div class="col-lg-5">
                 <i class="fas fa-bullseye"></i>
                 <h1 class="h1" id="our-vision-head">OUR VISION</h1><br/>
-
                 <p id="our-vision-text">The company was founded with one clear vision in mind: To become the no. 1
                     experts on football.
                     With a unique approach that combines subjective input from highly skilled analysts with innovative
@@ -210,7 +193,7 @@
 
             <div class="view overlay zoom col-sm-6 col-md-6 col-lg-4">
                 <a href="https://ventsislavkostadinov.github.io/BritainFootball/" target="_blank"><img
-                        src="assets/gallery/400x300/classic championship-400x300.jpg" alt="zoom">
+                        src="assets/gallery/400x300/classic-championship-400x300.jpg" alt="zoom">
                     <div class="mask flex-center waves-effect waves-light">
                         <p class="white-text"><i class="fas fa-link"></i>&nbsp;Classic Championship</p>
                     </div>
@@ -318,23 +301,25 @@
     </div>
 </section>
 
-
+<script src="bootstrap/jquery-3.4.1.min.js"></script>
+<script src="bootstrap/popper.min.js"></script>
+<script src="bootstrap/bootstrap.min.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
+<script src="js/translation.js"></script>
+<script src="js/description.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+<script src="js/jquery.parallax-scroll.js"></script>
+<script src="https://kit.fontawesome.com/9b583a4a90.js"></script>
+<script src="js/app.js"></script>
     <script>
-
         // add wow.js
         new WOW().init();
-
         // add particles
-        particlesJS.load('particles-js', 'particles.json', function () {
-            console.log('callback - particles.js config loaded')
+        particlesJS.load('particles-js', 'particles.json', () => { console.log('callback - particles.js config loaded')
         });
-
         // add parallax effect
         $('.bg-holder').parallaxScroll({friction: 0.3});
-
-
     </script>
-
-
 </body>
 </html>
