--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
+    <title>Ultra Site</title>
+
 
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <!--Favicon-->
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
@@ -91,7 +99,7 @@
             <div class="carousel-item">
                 <div class="view">
                     <div class="full-bg-img flex-center">
-                        <h1 class="lang" key="theme-tr">Choose your theme</h1>
+                        <h1 class="lang" key="design-tr">Choose the elegant design</h1>
                     </div>
                 </div>
             </div>
@@ -99,7 +107,7 @@
             <div class="carousel-item">
                 <div class="view">
                     <div class="full-bg-img flex-center">
-                        <h1 class="lang" key="business-tr">Let your business be successful</h1>
+                        <h1 class="lang" key="business-tr">Let your website be successful</h1>
                     </div>
                 </div>
             </div>
@@ -156,19 +164,18 @@
                     <div class="tab-content" id="pills-tabContent">
                         <div class="tab-pane fade show active" id="pills-home" role="tabpanel"
                             aria-labelledby="pills-home-tab">
-                            <p id="text1"></p>
+                            <p id='development-text' class="lang" key="devArticle-tr" />
                         </div>
                         <div class="tab-pane fade" id="pills-profile" role="tabpanel"
                             aria-labelledby="pills-profile-tab">
-                            <p id="text3"></p>
+                            <p id="testing-text" class="lang" key='testArticle-tr' />
                         </div>
                         <div class="tab-pane fade" id="pills-contact" role="tabpanel"
                             aria-labelledby="pills-contact-tab">
-                            <p id="text2"></p>
+                            <p id="maintenance-text" class="lang" key='maintenance-tr' />
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
         <br /><br />
@@ -176,15 +183,12 @@
             <div class="row">
                 <div class="col-lg-5">
                     <i class="fas fa-bullseye"></i>
-                    <h1 class="h1" id="our-vision-head">OUR VISION</h1><br />
-                    <p id="our-vision-text">The company was founded with one clear vision in mind: To become the no. 1
-                        experts on football.
-                        With a unique approach that combines subjective input from highly skilled analysts with
-                        innovative
-                        modelling techniques,
-                        we believe that we can continue to take our understanding of the game to new levels.</p>
+                    <h1 class="h1 lang" id="our-vision-head" key='our-vision-title-tr'>OUR VISION</h1><br />
+                    <p id="our-vision-text" class="lang" key="our-vision-tr">
+                        Our vision is to provide quality services that exceed the expectations of our clients. The
+                        company was founded with one clear
+                        vision in mind: we want to be your reliable partner, who is able to ensure your success.</p>
                 </div>
-
                 <div class="col-lg-7 img-gradient">
                     <span class="wow animated fadeInRight" data-wow-delay="0.8s" id="red-square"></span>
                     <img class="img-fluid mx-auto d-block" src="assets/laptop-notebook.jpg" alt="">
@@ -198,7 +202,7 @@
     <section id="projects"><br />
         <div class="wow animated fadeInLeft" data-wow-delay="0.8s">
             <hr id="red-banner" />
-            <span class="h1">Our Works</span></div>
+            <span class="h1 lang" key='demo-projects-tr'>Our Works</span></div>
         <div class="container-fluid px-0">
             <div class="row no-gutters">
 
@@ -280,12 +284,12 @@
 
     <section id='particles-js' class="bg-holder" data-width="1920" data-height="1080">
         <div class="container-fluid text-center">
-            <h1>We deliver Solutions</h1>
-            <h2>for your business</h2>
+            <h1 class="lang" key='we-deliver-solutions-tr'>We Provide Solutions</h1>
+            <h2 class="lang" key='elegant-website-tr'>for your elegant website</h2>
         </div>
     </section>
 
-    <section id="technologies">
+    <section id="services">
         <h1 class="h1">Services</h1>
         <div class="container-fluid">
             <div class="row">
@@ -300,8 +304,8 @@
                 </div>
 
                 <div class="col-md-3 col-sm-6">
-                    <i class="fas fa-palette"></i>
-                    <p class="text-center"><span>Regular </span>Updates</p>
+                    <i class="fas fa-tachometer-alt"></i>
+                    <p class="text-center"><span>Page Speed </span>Optimisation</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6">
@@ -311,7 +315,6 @@
             </div>
         </div>
     </section>
-
 
     <section id='testimonials'>
         <h1 class="h1-responsive font-weight-bold my-5">Testimonials</h1>
@@ -386,19 +389,14 @@
                 </div>
             </div>
         </div>
-
     </section>
-
 
     <section id="blogs">
         <h1 class="text-center">Blog articles</h1>
 
         <div class="container">
             <div class="row">
-
                 <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
-
-
                     <div class="controls-top">
                         <a class="btn-floating" href="#multi-item-example" data-slide="prev"><i
                                 class="fas fa-chevron-left"></i></a>
@@ -413,8 +411,6 @@
                     </ol>
 
                     <div class="carousel-inner" role="listbox">
-
-
                         <div class="carousel-item active">
 
                             <div class="col-lg-12">
@@ -440,7 +436,6 @@
                         </div>
 
                         <div class="carousel-item">
-
                             <div class="col-lg-12">
                                 <div class="card mb-3">
                                     <div class="row no-gutters">
@@ -487,6 +482,7 @@
             </div>
         </div>
     </footer>
+
     <script src="bootstrap/jquery-3.4.1.min.js"></script>
     <script src="bootstrap/popper.min.js"></script>
     <script src="bootstrap/bootstrap.min.js"></script>
@@ -495,19 +491,16 @@
     <script src="js/translation.js"></script>
     <script src="js/description.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-    <!--https://parallax-scroll.aenism.com/-->
     <script src="js/jquery.parallax-scroll.js"></script>
     <script src="https://kit.fontawesome.com/9b583a4a90.js"></script>
     <script src="js/app.js"></script>
     <script>
         // add wow.js
         new WOW().init();
-
         // add particles
         particlesJS.load('particles-js', 'particles.json', () => {
             console.log('callback - particles.js config loaded')
         });
-
         // add parallax effect
         $('.bg-holder').parallaxScroll({ friction: 0.3 });
     </script>
